--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/jquery.fancybox.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
 </head>
 
 <body>
@@ -20,6 +21,9 @@
                     <img src="/images/Logo.svg" alt="logo" class="logo__img">
                 </a>
                 <nav class="menu">
+                    <div class="menu__burger">
+                        <span></span>
+                    </div>
                     <ul class="menu__list">
                         <li class="menu__list-item">
                             <a href="#" class="menu__list-link">Product</a>
@@ -87,6 +91,7 @@
             <a href="#" class="tools__link">sing up now</a>
         </div>
     </section>
+
     <section class="direction">
         <div class="container">
             <div class="direction__item">
@@ -130,6 +135,7 @@
             </div>
         </div>
     </section>
+
     <section class="direction">
         <div class="container">
             <div class="direction__item">
@@ -154,6 +160,7 @@
             </div>
         </div>
     </section>
+
     <section class="team">
         <div class="container">
             <div class="team__inner">
@@ -215,9 +222,105 @@
                     </div>
                     <a href="#" class="slider__item-title title">Success Steps For Your Personal Or Business Life</a>
                 </div>
+                <div class="slider__item">
+                    <img src="/images/slider-1.jpg" alt="marketing img" class="slider__item-img">
+                    <div class="slider__item-info">
+                        By
+                        <a href="" class="slider__item-author">Abdullah</a> | 03 March 2019
+                    </div>
+                    <a href="#" class="slider__item-title title">Increasing Prosperity With Positive Thinking</a>
+                </div>
+                <div class="slider__item">
+                    <img src="/images/slider-2.jpg" alt="marketing img" class="slider__item-img">
+                    <div class="slider__item-info">
+                        By
+                        <a href="" class="slider__item-author">Abdullah</a> | 03 March 2019
+                    </div>
+                    <a href="#" class="slider__item-title title">Increasing Prosperity With Positive Thinking</a>
+                </div>
+                <div class="slider__item">
+                    <img src="/images/slider-3.jpg" alt="marketing img" class="slider__item-img">
+                    <div class="slider__item-info">
+                        By
+                        <a href="" class="slider__item-author">Abdullah</a> | 03 March 2019
+                    </div>
+                    <a href="#" class="slider__item-title title">Success Steps For Your Personal Or Business Life</a>
+                </div>
+                <div class="slider__item">
+                    <img src="/images/slider-1.jpg" alt="marketing img" class="slider__item-img">
+                    <div class="slider__item-info">
+                        By
+                        <a href="" class="slider__item-author">Abdullah</a> | 03 March 2019
+                    </div>
+                    <a href="#" class="slider__item-title title">Increasing Prosperity With Positive Thinking</a>
+                </div>
+                <div class="slider__item">
+                    <img src="/images/slider-2.jpg" alt="marketing img" class="slider__item-img">
+                    <div class="slider__item-info">
+                        By
+                        <a href="" class="slider__item-author">Abdullah</a> | 03 March 2019
+                    </div>
+                    <a href="#" class="slider__item-title title">Increasing Prosperity With Positive Thinking</a>
+                </div>
+                <div class="slider__item">
+                    <img src="/images/slider-3.jpg" alt="marketing img" class="slider__item-img">
+                    <div class="slider__item-info">
+                        By
+                        <a href="" class="slider__item-author">Abdullah</a> | 03 March 2019
+                    </div>
+                    <a href="#" class="slider__item-title title">Success Steps For Your Personal Or Business Life</a>
+                </div>
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__inner">
+                <a href="#" class="logo">
+                    <img src="/images/Logo.svg" alt="logo" class="logo__img">
+                </a>
+                <div class="footer__menu">
+                    <h6 class="footer__menu-title title">Quick Links</h6>
+                    <ul class="footer__list">
+                        <li class="footer__list-item">
+                            <a href="#" class="footer__menu-link">About Us</a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="#" class="footer__menu-link">Blog</a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="#" class="footer__menu-link">Contact</a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="#" class="footer__menu-link">FAQ</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__menu">
+                    <h6 class="footer__menu-title title">Legal Stuff</h6>
+                    <ul class="footer__list">
+                        <li class="footer__list-item">
+                            <a href="#" class="footer__menu-link">Disclaimer</a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="#" class="footer__menu-link">Financing</a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="#" class="footer__menu-link">Privacy Policy</a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="#" class="footer__menu-link">Terms of Service</a>
+                        </li>
+                    </ul>
+                </div>
+                <form action="#" class="footer__form">
+                    <p class="footer__form-text">knowing you're always on the best energy deal.</p>
+                    <input class="footer__form-input" type="text" placeholder="Enter your phone ">
+                    <button class="footer__form-btn" type="submit">Sign up Now</button>
+                </form>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
